GPL/P6/tests/t023.err
Semantic error on line 6: Invalid right operand for operator '+'.
Semantic error on line 7: Invalid right operand for operator '-'.
Semantic error on line 8: Invalid right operand for operator '*'.
Semantic error on line 9: Invalid right operand for operator '/'.
Semantic error on line 10: Invalid right operand for operator '<'.
Semantic error on line 11: Invalid right operand for operator '>'.
Semantic error on line 12: Invalid right operand for operator '<='.
Semantic error on line 13: Invalid right operand for operator '>='.
Semantic error on line 14: Invalid right operand for operator '=='.
Semantic error on line 16: Invalid right operand for operator '+'.
Semantic error on line 17: Invalid right operand for operator '-'.
Semantic error on line 18: Invalid right operand for operator '*'.
Semantic error on line 19: Invalid right operand for operator '/'.
Semantic error on line 21: Invalid right operand for operator '+'.
